--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,8 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
+  secondary:  #41b2f4, 
+  third:      #A9C3F1,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
