--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: ( primary: #488aff, secondary: #41b2f4, third: #A9C3F1, danger: #f53d3d, light: #f4f4f4, dark: #222);
-
+//secondary: #32db64
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
