#UI# UI Adjustment

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
+    .divRound{
+        height: 65vh;
+        //text-align: center;
+        //vertical-align: 
+        padding-top:20vh;
+        color:white;
+        font-size: 1.8em;
+    }
 
+    .buttonContainer{
+        padding: 2vh 0;
+    }
 }
